# pallet-product-registry

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs  mock.rs  tests.rs
